# firefly-assistant

./: .env.example  .gitattributes  .gitignore  PLAN.md  README.md  pyproject.toml
docs/: COLD_START.md  ENRICHMENT.md  RECOMMENDED_FIREFLY_ORGANIZATION.md
experiments/: EMBEDDINGS_SPIKE.md  discovery_demo.py  embed_spike.py  enrich_demo.py  merchant_resolution_probe.py
samples/: README.md  expected.example.json
scripts/: firefly_fixture.py  validate_ocr.py
src/firefly_bot/: __init__.py  cli.py  config.py  labels.py  models.py  pipeline.py  ubl.py
src/firefly_bot/banking/: accounts.py  camt.py  importer.py  mcc.py
src/firefly_bot/enrich/: __init__.py  bootstrap.py  categoriser.py  corrections.py  discovery.py  embedder.py
src/firefly_bot/firefly/: client.py  ledger.py
src/firefly_bot/ingest/: imap.py  source.py
src/firefly_bot/matching/: matcher.py
src/firefly_bot/ocr/: extract.py  heuristics.py  render.py
src/firefly_bot/report/: summary.py
tests/: test_accounts.py  test_bootstrap.py  test_camt.py  test_client.py  test_corrections.py  test_discovery.py  test_enrich.py  test_heuristics.py  test_importer.py  test_matcher.py  test_pipeline.py  test_render.py  test_ubl.py
